ghc/compiler/tests/typecheck/should_succeed/tc078.hs
--!!! instance decls with no binds
--
module M where

data Bar a = MkBar Int a

instance Eq a => Eq (Bar a)
instance Ord a => Ord (Bar a)
